Delta & postcommitment recalculation added.
